--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "ethers": "5.5.3",
+    "siwe": "1.0.0",
     "hash-wasm": "^4.9.0"
   }
 }
