--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.3",
     "autoprefixer": "^10.4.12",
     "nuxt": "3.0.0-rc.11",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "nuxt-windicss": "^2.5.3",
+    "postcss": "^8.4.16"
   },
   "dependencies": {
     "ethers": "5.5.3",
+    "hash-wasm": "^4.9.0",
     "siwe": "1.0.0",
-    "hash-wasm": "^4.9.0"
+    "vue-select": "^4.0.0-beta.5"
   }
 }
