--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
-    "nuxt": "3.0.0-rc.11",
+    "nuxt": "3.0.0",
     "nuxt-windicss": "^2.5.3",
     "postcss": "^8.4.16"
   },
