--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.4.16"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.13",
     "ethers": "5.5.3",
     "hash-wasm": "^4.9.0",
     "siwe": "1.0.0",
