--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.14",
     "nuxt": "3.0.0",
-    "nuxt-windicss": "^2.5.3",
-    "postcss": "^8.4.16"
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
     "ethers": "5.5.3",
     "hash-wasm": "^4.9.0",
+    "lazy-pix": "^1.0.0",
     "siwe": "1.0.0",
-    "vue-select": "^4.0.0-beta.5"
+    "vue-select": "^4.0.0-beta.5",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   }
 }
