--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
+    "chart.js": "^4.3.0",
     "ethers": "5.5.3",
     "hash-wasm": "^4.9.0",
     "lazy-pix": "^1.0.0",
     "siwe": "1.0.0",
+    "vue-chartjs": "^5.2.0",
     "vue-select": "^4.0.0-beta.5",
     "vue-virtual-scroller": "^2.0.0-beta.8"
   }
