--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^3.3.1"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^1.10.3",
     "@heroicons/vue": "^2.0.13",
     "chart.js": "^4.3.0",
     "ethers": "5.5.3",
