--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.0.3",
     "autoprefixer": "^10.4.14",
     "nuxt": "3.0.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1"
   },
   "dependencies": {
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/core": "^5.0.3",
+    "@capacitor/ios": "^5.0.3",
     "@heroicons/vue": "^2.0.13",
     "chart.js": "^4.3.0",
     "ethers": "5.5.3",
