--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,7 +1,7 @@
 {
   "appId": "com.rcaxio.rcax",
   "appName": "RCAX",
-  "webDir": "dist",
+  "webDir": ".output/public",
   "server": {
     "androidScheme": "https"
   }
