--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/android": "^5.0.3",
     "@capacitor/core": "^5.0.3",
     "@capacitor/ios": "^5.0.3",
+    "@capacitor/push-notifications": "^5.0.2",
     "@heroicons/vue": "^2.0.13",
     "chart.js": "^4.3.0",
     "ethers": "5.5.3",
