--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^5.0.3",
     "autoprefixer": "^10.4.14",
     "nuxt": "3.0.0",
@@ -16,12 +17,15 @@
   },
   "dependencies": {
     "@capacitor/android": "^5.0.3",
-    "@capacitor/core": "^5.0.3",
+    "@capacitor/browser": "^5.0.2",
+    "@capacitor/core": "^5.0.4",
+    "@capacitor/filesystem": "^5.0.2",
     "@capacitor/ios": "^5.0.3",
     "@capacitor/push-notifications": "^5.0.2",
     "@heroicons/vue": "^2.0.13",
     "chart.js": "^4.3.0",
     "ethers": "5.5.3",
+    "firebase": "^9.22.1",
     "hash-wasm": "^4.9.0",
     "lazy-pix": "^1.0.0",
     "nuxt-cloudflare-analytics": "^1.0.8",
