--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "tailwindcss": "^3.3.1"
   },
   "dependencies": {
+    "@capacitor-community/media": "^5.0.0",
     "@capacitor/android": "^5.0.3",
     "@capacitor/browser": "^5.0.2",
     "@capacitor/core": "^5.0.4",
-    "@capacitor/filesystem": "^5.0.2",
     "@capacitor/ios": "^5.0.3",
     "@capacitor/push-notifications": "^5.0.2",
+    "@capacitor/share": "^5.0.2",
     "@heroicons/vue": "^2.0.13",
     "chart.js": "^4.3.0",
     "ethers": "5.5.3",
