--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/android": "^5.0.3",
     "@capacitor/browser": "^5.0.2",
     "@capacitor/core": "^5.0.4",
+    "@capacitor/haptics": "^5.0.4",
     "@capacitor/ios": "^5.0.3",
     "@capacitor/local-notifications": "^5.0.2",
     "@capacitor/push-notifications": "^5.0.2",
