feat: sliding ad banner

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "siwe": "1.0.0",
     "vue-chartjs": "^5.2.0",
     "vue-gtag-next": "^1.14.0",
-    "vue-select": "^4.0.0-beta.5"
+    "vue-select": "^4.0.0-beta.5",
+    "vue3-carousel": "^0.3.1"
   }
 }
