--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chart.js": "^4.3.0",
     "click-outside-vue3": "^4.0.1",
     "cordova-plugin-purchase": "^13.4.3",
-    "ethers": "5.5.3",
+    "ethers": "^5.5.3",
     "firebase": "^9.22.1",
     "hash-wasm": "^4.9.0",
     "lazy-pix": "^1.0.0",
