--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^5.0.3",
     "autoprefixer": "^10.4.14",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.7.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   },
@@ -28,6 +28,7 @@
     "@heroicons/vue": "^2.0.13",
     "@ionic/vue": "^7.0.10",
     "@metamask/detect-provider": "^2.0.0",
+    "@nuxt/image": "^1.1.0",
     "chart.js": "^4.3.0",
     "click-outside-vue3": "^4.0.1",
     "cordova-plugin-purchase": "^13.4.3",
